--- a/frontend/src/app/components/registration-process/country-selector/country-selector.component.html
+++ b/frontend/src/app/components/registration-process/country-selector/country-selector.component.html
@@ -1,6 +1,6 @@
 <form class="example-form row align-items-center">
     <!-- city search autocomplete -->
-    <app-city-search #citySearch class="col" [appearance]='citySearchAppearance' [placeholder]='citySearchPlaceholder'></app-city-search>
+    <app-city-search #citySearch class="col" [appearance]='citySearchAppearance' [placeholder]='citySearchPlaceholder' [clearOnSearch]='true'></app-city-search>
     <div class="col-auto mr-auto">
         <span><strong>Or</strong></span>
     </div>
