--- a/frontend/src/app/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/search-bar/search-bar.component.html
@@ -1,32 +1,26 @@
 <!-- search bar -->
-<div class="container-fluid" style="background-color: rgba(255, 255, 255, 0.9);">
-  <form [formGroup]='searchBarForm' (ngSubmit)='onSubmit()' class='form row' style="width: 100%;">
-    <span class="col row border mr-auto">
-      <!-- venue name -->
-      <mat-form-field class="input col-auto"  appearance="standard">
-        <mat-label>Search for</mat-label>
-        <input matInput #search
-          class='form-control input'
-          type='search'
-          placeholder='Ex: restaurant'
-          aria-label='Search'
-          autocomplete='off'
-          formControlName='venueName'
-          (keydown.enter)='onSubmit()'>
-        <i fas fa-search aria-hidden="true"></i>
-      </mat-form-field>
-      &nbsp;
-      <p class="align-self-center">in</p>
-      &nbsp;
-      <!-- venue location -->
-      <app-city-search appearance='outline' placeholder='Region' class="col align-self-end"></app-city-search>
-      <!-- submit -->
-      <button mat-raised-button class="col-auto align-self-center" color='primary' (click)='onSubmit()' matTooltip='select a city to search in or drag the area you want to search to the center of the visible map' matTooltipShowDelay='800'>
-        <mat-icon>search</mat-icon>
-      </button>
-    </span>
+<form [formGroup]='searchBarForm' (ngSubmit)='onSubmit()' class='container-fluid row' style="min-width: 100%; background-color: rgba(255, 255, 255, 0.9); margin: 0; padding: 0;">
+  <span class="col row mr-auto" style="padding-top: 1em; margin: 0; padding-right: 0; padding-left: 0;">
+    <!-- venue name -->
+    <mat-form-field class="col align-self-center" appearance="outline">
+      <mat-label>Search for</mat-label>
+      <input matInput #search
+        type='search'
+        placeholder='Ex: restaurant'
+        aria-label='Search'
+        autocomplete='off'
+        formControlName='venueName'
+        (keydown.enter)='onSubmit()'>
+      <i fas fa-search aria-hidden="true"></i>
+    </mat-form-field>
+    &nbsp;
+    <p class="align-self-center" *ngIf='defaultFilter === "1" || defaultFilter === "0"'>in</p>
+    &nbsp;
+    <!-- venue location -->
+    <app-city-search appearance='outline' placeholder='Region' class="col align-self-center" *ngIf='defaultFilter === "1" || defaultFilter === "0"'></app-city-search>
+    <mat-divider vertical="true" style="margin-bottom: 1em;"></mat-divider>
     <!-- filter user|venues -->
-    <mat-form-field class="col-auto align-self-center">
+    <mat-form-field class="col-auto align-self-center" *ngIf='!isChild'>
       <mat-label>Filter</mat-label>
       <mat-select [(ngModel)]='defaultFilter' [ngModelOptions]="{standalone: true}" (selectionChange)='changeFilter($event)'>
         <mat-option value='0'>All</mat-option>
@@ -34,7 +28,21 @@
         <mat-option value='2'>Users</mat-option>
       </mat-select>
     </mat-form-field>
-  </form>
-</div>
+    <!-- filter categories -->
+    <mat-form-field class="col-auto align-self-center" appearance='outline' *ngIf='isChild'>
+      <mat-label>Category</mat-label>
+      <mat-select [(value)]='defaultCategory'>
+          <mat-option value='All'>All</mat-option>
+          <mat-option *ngFor='let category of categories' [value]='category.name'>{{category.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <!-- submit -->
+    <div class="col-auto" style="padding-top: 1em;">
+      <button mat-raised-button class="align-self-center" color='primary' (click)='onSubmit()' matTooltip='select a city to search in or drag the area you want to search to the center of the visible map' matTooltipShowDelay='800'>
+        <mat-icon>search</mat-icon>
+      </button>        
+    </div>
+  </span> 
+</form>
 
-<router-outlet></router-outlet>
+<router-outlet *ngIf='!isChild'></router-outlet>
