--- a/frontend/src/app/components/display-posts/display-posts.component.scss
+++ b/frontend/src/app/components/display-posts/display-posts.component.scss
@@ -19,3 +19,7 @@ mat-spinner {
   width: 100%;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
+.authorButtons {
+  right: 0px;
+  position: absolute
+}
