--- a/frontend/src/app/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/search-bar/search-bar.component.html
@@ -3,7 +3,7 @@
   <span class="col row mr-auto" style="padding-top: 1em; margin: 0; padding-right: 0; padding-left: 0;">
     <!-- venue name -->
     <mat-form-field class="col align-self-center" appearance="outline">
-      <mat-label>Search for</mat-label>
+      <mat-label>Search for Venue</mat-label>
       <input matInput #search
         type='search'
         placeholder='Ex: restaurant'
