--- a/frontend/src/app/components/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/tabs/searchresults/searchresults.component.html
@@ -6,10 +6,10 @@
         <mat-spinner class="col-auto"></mat-spinner>
       </div>
       <!-- nothing found -->
-      <mat-card *ngIf="openTab.content.venues.length === 0 && openTab.content.users.length === 0">
+      <mat-card *ngIf="openTab.content.venues.length === 0 && openTab.content.users.length === 0 && !loading">
         <mat-card-header>
           <mat-card-title>
-            Nothing Found...
+            No Matches Found...
           </mat-card-title>
         </mat-card-header>
       </mat-card>
