--- a/frontend/src/app/components/display-posts/display-posts.component.html
+++ b/frontend/src/app/components/display-posts/display-posts.component.html
@@ -21,9 +21,10 @@
       <img mat-card-image [src]="post.imagePath" [alt]="post.title">
 
       <mat-card-actions>
-        <button mat-button>LIKE</button>
+        <button mat-button type="button" (click)="like(post.id)" (mousedown)="mousedown()" (mouseup)="mouseup()" (mouseleave)="mouseup()">LIKE {{ post.likes.length }}</button>
         <button mat-button>SHARE</button>
       </mat-card-actions>
+      <div *ngIf="likeShow">{{post.likes}}</div>
     </mat-card>
   </div>
 </div>
