--- a/frontend/src/app/components/tabs/searchresults/venueButton/venueButton.component.scss
+++ b/frontend/src/app/components/tabs/searchresults/venueButton/venueButton.component.scss
@@ -10,3 +10,10 @@ mat-card-header:hover, #description:hover, mat-icon:hover {
   cursor: pointer;
 }
 
+.description:hover {
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
