--- a/frontend/src/app/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/search-bar/search-bar.component.html
@@ -3,7 +3,7 @@
   <span class="col row mr-auto" style="padding-top: 1em; margin: 0; padding-right: 0; padding-left: 0;">
     <!-- venue name -->
     <mat-form-field class="col align-self-center" appearance="outline">
-      <mat-label>Search for Venue</mat-label>
+      <mat-label>Search for {{defaultCategory === 'All'? '...' : defaultCategory}}</mat-label>
       <input matInput #search
         type='search'
         placeholder='Ex: restaurant'
@@ -11,13 +11,16 @@
         autocomplete='off'
         formControlName='venueName'
         (keydown.enter)='onSubmit()'>
+      <button mat-button *ngIf="search.value" matSuffix mat-icon-button aria-label="Clear" (click)="search.value=''" type='button'>
+        <mat-icon>close</mat-icon>  
+      </button>
       <i fas fa-search aria-hidden="true"></i>
     </mat-form-field>
     &nbsp;
     <p class="align-self-center" *ngIf='defaultFilter === "1" || defaultFilter === "0"'>in</p>
     &nbsp;
     <!-- venue location -->
-    <app-city-search appearance='outline' placeholder='Region' class="col align-self-center" *ngIf='defaultFilter === "1" || defaultFilter === "0"'></app-city-search>
+    <app-city-search appearance='outline' placeholder='Region' [clearOnSearch]='false' class="col align-self-center" *ngIf='defaultFilter === "1" || defaultFilter === "0"'></app-city-search>
     <mat-divider vertical="true" style="margin-bottom: 1em;"></mat-divider>
     <!-- filter user|venues -->
     <mat-form-field class="col-auto align-self-center" *ngIf='!isChild'>
