--- a/frontend/src/app/components/tabs/searchresults/venueButton/venueButton.component.html
+++ b/frontend/src/app/components/tabs/searchresults/venueButton/venueButton.component.html
@@ -1,5 +1,5 @@
-<mat-card (click)='navigate()' *ngIf="searchResult.venue">
-  <mat-card-header>
+<mat-card *ngIf="searchResult.venue">
+  <mat-card-header (click)='navigate()' >
     <mat-card-title>{{searchResult|null:['venue','name']}}</mat-card-title>
     <mat-card-subtitle>
       <p *ngFor="let item of (searchResult|null: ['venue','categories'])" class="inline">{{item.name}}</p>
@@ -7,14 +7,24 @@
   </mat-card-header>
 
   <mat-card-content class="container-fluid col-auto" style="margin-right: 1em;">
-    <p class="d-flex inline">
+  <p class="d-flex inline description" (click)='navigate()'>
       {{searchResult|null:['venue','location','address']}}
     </p>
     <hr>
+    <!-- quick actions -->
     <span class="row justify-content-end">
-      <mat-icon mat-icon-button matTooltip="share" matTooltipPosition='above' color='accent' class="col-auto mr-auto">share</mat-icon>
-      <mat-icon mat-icon-button matTooltip="show on map" matTooltipPosition='above' color='primary' class="col-auto mr-auto">map</mat-icon>
-      <mat-icon mat-icon-button matTooltip="add to trip" matTooltipPosition='above' class="col-auto mr-auto">playlist_add</mat-icon>
+      <button mat-button class="col-auto mr-auto">
+        <mat-icon mat-icon-button matTooltip="share" matTooltipPosition='above' color='accent' >share</mat-icon>
+      </button>
+      <button mat-button class="col-auto mr-auto">
+        <mat-icon mat-icon-button matTooltip="show on map" matTooltipPosition='above' color='primary' >map</mat-icon>
+      </button>
+      <button mat-button class="col-auto mr-auto">
+        <mat-icon mat-icon-button [matTooltip]="addTripText()" (click)='addToTrip()' matTooltipPosition='above' *ngIf='!isErr && !isLoading && !isSuccess'>playlist_add</mat-icon>
+        <mat-spinner diameter='20' *ngIf='isLoading'></mat-spinner>
+        <mat-icon mat-icon-button class="text-success" *ngIf='isSuccess && !isLoading'>check</mat-icon>
+        <mat-icon mat-icon-button class="text-danger" *ngIf='isErr && !isLoading' matTooltip='an error occured'>error</mat-icon>
+      </button>
     </span>
   </mat-card-content>
 </mat-card>
