--- a/frontend/src/app/components/add-post/add-post.component.html
+++ b/frontend/src/app/components/add-post/add-post.component.html
@@ -7,10 +7,13 @@
       <mat-error *ngIf="form.get('title').invalid">Please enter a post title.</mat-error>
     </mat-form-field>
 
-    <mat-form-field>
-      <input matInput type="text" formControlName="location" placeholder="location">
-      <mat-error *ngIf="form.get('location').invalid">Please enter a location</mat-error>
-    </mat-form-field>
+    <!-- <mat-form-field> -->
+      <!-- <input matInput type="text" formControlName="location" placeholder="location"> -->
+      <!-- <mat-error *ngIf="form.get('location').invalid">Please enter a location</mat-error> -->
+    <!-- </mat-form-field> -->
+
+    <app-city-search (locationAdded) = 'onAddLocation($event)' [location] ="this.location">
+    </app-city-search>
 
     <mat-form-field>
       <textarea matInput rows="4" formControlName="content" placeholder="Post Content"></textarea>
@@ -19,7 +22,7 @@
 
     <div>
       <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
-      <input type="file" #filePicker (change)="onImagePicked($event)">
+      <input class='hidden' type="file" #filePicker (change)="onImagePicked($event)">
     </div>
 
     <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
@@ -34,10 +37,10 @@
           <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
         </mat-chip>
         <input placeholder="add a tag..."
-               [matChipInputFor]="chipList"
-               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-               [matChipInputAddOnBlur]="addOnBlur"
-               (matChipInputTokenEnd)="addTag($event)">
+          [matChipInputFor]="chipList"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          [matChipInputAddOnBlur]="addOnBlur"
+          (matChipInputTokenEnd)="addTag($event)">
       </mat-chip-list>
     </mat-form-field>
 
@@ -46,3 +49,4 @@
     <button mat-raised-button color="accent" type="submit">Save Post</button>
   </form>
 </mat-card>
+
