--- a/frontend/src/app/components/display-posts/display-posts.component.html
+++ b/frontend/src/app/components/display-posts/display-posts.component.html
@@ -16,7 +16,7 @@
         {{ post.title }}
       </h1>
       <p>
-        {{ 'tags: '+ post.tags.toString() }} {{post.date }}
+        {{post.tags }} {{post.date }}
       </p>
       <p>
             {{ post.content }}
