--- a/frontend/src/app/components/display-posts/display-posts.component.html
+++ b/frontend/src/app/components/display-posts/display-posts.component.html
@@ -29,6 +29,8 @@
       </mat-card-actions>
       <div *ngIf="likeShow">{{post.likes}}</div>
     </mat-card>
+
+    <app-comment-section [post] ='post'></app-comment-section>
   </div>
 </div>
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
