--- a/frontend/src/app/components/city-search/city-search.component.html
+++ b/frontend/src/app/components/city-search/city-search.component.html
@@ -7,7 +7,7 @@
     [matAutocomplete]="auto"
     [formControl]="myControl"
     autocomplete="off">
-    <button mat-button *ngIf="myControl.value != ''" matSuffix mat-icon-button aria-label="Clear" (click)="myControl.patchValue(''); _clickedOptionLocal = null" type='button'>
+    <button mat-button *ngIf="myControl.value" matSuffix mat-icon-button aria-label="Clear" (click)="myControl.patchValue(''); _clickedOptionLocal = null" type='button'>
         <mat-icon>close</mat-icon>
     </button>
     <small *ngIf='!checkCityValidity() && myControl.touched' class="text-danger">this is not a valid region</small>
